style: Change back image of cardas, adjust grid gap and justify content, fix row and column size

--- a/memory-game/styles/main.scss
+++ b/memory-game/styles/main.scss
@@ -64,9 +64,10 @@ body {
     width: 80vw;
     margin-bottom: 2rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(10rem, 1fr));
-    grid-gap: 0.5rem;
+    grid-template-columns: repeat(auto-fit, 10rem);
+    grid-template-rows: repeat(auto-fit, 15rem);
+    grid-gap: 2rem 3rem;
+    justify-content: center;
 }
 .card {
   width: 100%;
@@ -74,6 +75,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 10px;
+  border: 1px solid #000;
   &:hover {
     cursor: pointer;
     opacity: 0.7;
